--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,6 +2,8 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 html, body
