--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -7,6 +7,6 @@
     <h1 class="mt-4 text-left text-muted">Update Category #{{ category.id }}</h1>
     <div class="text-right"><a href="{{ path('app_category_show' , {id: category.id})}}" class="text-decoration-none btn btn-secondary">🡠 Back</a></div>
 
-    {{ include('category/_form.html.twig', {submitButtonText:'Edit Pin'}) }}
+    {{ include('category/_form.html.twig', {submitButtonText:'Edit categorie'}) }}
 </div>
 {% endblock %}
