--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>{% block title %}Panterest{% endblock %}</title>
+        <title>{% block title %}The short tasks{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
