--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-4">
 <div class="container">
-      <a class="navbar-brand" href="{{ path('app_home') }}">Panterest</a>
+      <a class="navbar-brand" href="{{ path('app_home') }}"><i class="h4 bi bi-clipboard-check"></i> The short tasks</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
