--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -3,10 +3,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('images/favicon/apple-touch-icon.png') }}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('images/favicon/favicon-32x32.png') }}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('images/favicon/favicon-16x16.png') }}">
-        <link rel="manifest" href="{{ asset('images/favicon/site.webmanifest') }}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('build/images/favicon/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('build/images/favicon/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('build/images/favicon/favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ asset('build/images/favicon/site.webmanifest') }}">
         <title>{% block title %}The short tasks{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
